c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/empty_initializer_list.c
// An initializer list must have at least one element
// NOTE: empty initializer lists are valid as of C23

struct s {int a;};

int main(void) {
    struct s foo = {};
    return 0;
}